crates/ohno_macros_impl/tests/snapshots/public_api__an_argument_may_call_a_method_of_self.snap
---
source: crates/ohno_macros_impl/tests/public_api.rs
expression: output
---
// === bare call ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner
            .format_error(
                f,
                "T",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(
                        ::std::format!("value {}", & (self.describe())),
                    ),
                ),
            )
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner
            .format_message(
                "T",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(
                        ::std::format!("value {}", & (self.describe())),
                    ),
                ),
            )
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T")
            .field("path", &self.path)
            .field("other", &self.other)
            .field("inner", &self.inner)
            .finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(
        path: impl ::core::convert::Into<String>,
        other: impl ::core::convert::Into<u32>,
    ) -> Self {
        Self {
            path: path.into(),
            other: other.into(),
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        path: impl ::core::convert::Into<String>,
        other: impl ::core::convert::Into<u32>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            path: path.into(),
            other: other.into(),
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}

// === await ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner
            .format_error(
                f,
                "T",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(
                        ::std::format!("value {}", & (self.path. await)),
                    ),
                ),
            )
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner
            .format_message(
                "T",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(
                        ::std::format!("value {}", & (self.path. await)),
                    ),
                ),
            )
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T")
            .field("path", &self.path)
            .field("other", &self.other)
            .field("inner", &self.inner)
            .finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(
        path: impl ::core::convert::Into<String>,
        other: impl ::core::convert::Into<u32>,
    ) -> Self {
        Self {
            path: path.into(),
            other: other.into(),
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        path: impl ::core::convert::Into<String>,
        other: impl ::core::convert::Into<u32>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            path: path.into(),
            other: other.into(),
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}

// === trailing comma after the arguments ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner
            .format_error(
                f,
                "T",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(::std::format!("value {}", & (self.path))),
                ),
            )
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner
            .format_message(
                "T",
                ::core::option::Option::Some(
                    ::std::borrow::Cow::from(::std::format!("value {}", & (self.path))),
                ),
            )
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T")
            .field("path", &self.path)
            .field("other", &self.other)
            .field("inner", &self.inner)
            .finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(
        path: impl ::core::convert::Into<String>,
        other: impl ::core::convert::Into<u32>,
    ) -> Self {
        Self {
            path: path.into(),
            other: other.into(),
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        path: impl ::core::convert::Into<String>,
        other: impl ::core::convert::Into<u32>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            path: path.into(),
            other: other.into(),
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}
