crates/ohno_macros_impl/tests/snapshots/public_api__an_input_that_cannot_hold_a_core_is_rejected.snap
---
source: crates/ohno_macros_impl/tests/public_api.rs
expression: output
---
// === unit struct ===
::core::compile_error! {
    "`#[derive(ohno::Error)]` needs a field to hold the OhnoCore, and a unit struct has none. Declare one, or use `#[ohno::error]`, which adds it"
}

// === enum ===
::core::compile_error! {
    "`#[derive(ohno::Error)]` supports structs only. An enum has no single field to hold the OhnoCore"
}

// === union ===
::core::compile_error! {
    "`#[derive(ohno::Error)]` supports structs only"
}

// === no field holds a core ===
::core::compile_error! {
    "No field holds the OhnoCore. Declare one, mark it with `#[error]` if its type is spelled through an alias, or use `#[ohno::error]`, which adds the field itself"
}

// === two marked cores ===
::core::compile_error! {
    "Multiple fields marked with `#[error]`. Mark only the field holding the OhnoCore"
}

// === two unmarked cores ===
::core::compile_error! {
    "Several fields hold an OhnoCore and none is marked. Mark the one holding the error representation with `#[error]`"
}

// === one field marked twice ===
::core::compile_error! {
    "Duplicate `#[error]` on the same field. Mark it once"
}
