crates/ohno_macros_impl/tests/snapshots/public_api__an_unparsable_derive_input_is_reported.snap
---
source: crates/ohno_macros_impl/tests/public_api.rs
expression: output
---
::core::compile_error! {
    "expected one of: `struct`, `enum`, `union`"
}
